# AI_SOC

./: .env.example  .gitignore  .pylintrc  AI-SOC-Launcher.py  Baseline.md  CLEANUP_REPORT.md  DEPLOYMENT-REPORT-PHASE1.md  DEPLOYMENT_REPORT.md  LICENSE  PHASE3_INTEGRATION_REPORT.md  QA_REPORT.md  README.md  ROADMAP.md  SECURITY_GUIDE.md  START-AI-SOC.bat  STATUS.md  STRUCTURE.md  deploy.ps1  hero-gradient.js  index.html  interactive-orb.js  mendicant_v1.5_init.py  mkdocs.yml  persist_hollowed_eyes_report.py  persist_loveless_report.py  pyproject.toml  pytest.ini  quickstart.sh  requirements-security.txt  test_security_audit.py  three-sphere-morph.js
.serena/: project.yml
ai-soc/: 404.html  architecture.html  index.html  ml-accuracy.html  performance.html  portal-landing.html  sitemap.xml  three-sphere-morph.js
config/: openssl-dashboard.cnf  openssl-filebeat.cnf  openssl-indexer.cnf  openssl-manager.cnf  openssl-root-ca.cnf
dashboard/: app.py
datasets/: README.md
docker-compose/: README.md  ai-services.yml  dev-environment.yml  integrated-stack.yml  monitoring-stack.yml  network-analysis-stack.yml  phase1-siem-core-windows.yml  phase1-siem-core.yml  phase2-soar-stack.yml
docs/: CNAME  DEPLOYMENT_GUIDE.md  QUICKSTART_VALIDATION_FIX.md  README.md  RESEARCH_BIBLIOGRAPHY.md  SECURITY_BASELINE.md  competitive-analysis.md  index.md  portal-landing.html  three-sphere-morph.js
fairness/: 404.html  index.html  methodology.html  sitemap.xml
ml_training/: Dockerfile  README.md  TRAINING_REPORT.md  inference_api.py  requirements.txt  test_inference.py  (+2 more)
(+203 files in other folders)
